--- a/app/src/main/res/layout/adapter_common_list_item.xml
+++ b/app/src/main/res/layout/adapter_common_list_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/stateName"
+        android:id="@+id/itemName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/state_item_list_padding"
